# DetStream-Vision-Agents

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Development.md  README.md  ai-dota-coaching.md  cli.py  conftest.py  dev.py  env.example  instr.txt  main.py  observability.py  pyproject.toml  pytest.ini  start_with_live_game.py  tiny_test.py  utils.py  video_track_forwarding_analysis.md
examples/01_simple_agent_example/: 01_simple_agent_example.py  README.md  pyproject.toml  simple_agent_example.py  simple_test.py  sock.py
examples/02_golf_coach_example/: README.md  golf_coach.md  golf_coach_example.py  pyproject.toml
examples/03_cluely_example/: cluely_example.py  pyproject.toml
examples/04_dota_coach_example/: dota_example.py  pyproject.toml
examples/07_function_calling_example/: all_providers_example.py  claude_example.py  client_secret_830246983638-3ao1prlo980kijda1hengjnnh483it08.apps.googleusercontent.com.json  demo.py  function_calling_example.py  gemini_example.py  gemini_simple_example.py  main_example.py  openai_example.py  pyproject.toml  token.json
examples/09_github_mcp_demo/: README.md  gemini_realtime_github_mcp_demo.py  github_mcp_demo.py  openai_realtime_github_mcp_demo.py  openai_realtime_hybrid_demo.py  pyproject.toml  test_openai_realtime_function_calling.py
examples/agents_examples/gemini_live_realtime/: gemini_live_example.py  main.py  pyproject.toml
examples/agents_examples/openai_realtime_webrtc/: main.py  openai_realtime_logs_final_20250917_171153.txt  pyproject.toml
examples/other_examples/07_function_calling_example/: claude_example.py  gemini_example.py  openai_example.py  pyproject.toml
examples/other_examples/09_github_mcp_demo/: README.md  gemini_realtime_github_mcp_demo.py  github_mcp_demo.py  openai_realtime_github_mcp_demo.py  pyproject.toml
examples/other_examples/gemini_live_realtime/: gemini_live_example.py  pyproject.toml
examples/other_examples/plugins_examples/llm_audio_conversation/: pyproject.toml
examples/plugins_examples/stt_deepgram_transcription/: pyproject.toml
plugins/anthropic/: plugin.py  pyproject.toml
plugins/anthropic/stream_agents/plugins/anthropic/: events.py  (+1 more)
plugins/anthropic/tests/: test_anthropic.py  test_anthropic_llm.py
plugins/aws/example/: aws_llm_function_calling_example.py  aws_polly_tts_example.py  aws_qwen_example.py  aws_realtime_function_calling_example.py  aws_realtime_nova_example.py  pyproject.toml
plugins/cartesia/: README.md  pyproject.toml
plugins/cartesia/tests/: test_tts.py
plugins/cartesia/tts/: tts.py
plugins/deepgram/: README.md  pyproject.toml
plugins/deepgram/stt/: stt.py
plugins/deepgram/tests/: test_deepgram_stt.py  test_realtime.py  test_stt.py
plugins/fal/: README.md  pyproject.toml
plugins/fal/stt/: stt.py
plugins/fal/tests/: test_stt.py
plugins/gemini/: README.md  pyproject.toml
plugins/gemini/live/: live.py
plugins/gemini/tests/: test_agent_integration.py  test_gemini_llm.py  test_gemini_realtime.py  test_live.py  test_live_integration.py  test_queue_and_video_forwarder.py  test_realtime2_integration.py  test_realtime2_video_sender.py  test_realtime_function_calling.py
plugins/getstream/: README.md  pyproject.toml
plugins/getstream/tests/: test_getstream_plugin.py  test_message_chunking.py  test_stream_conversation.py
plugins/kokoro/: README.md  pyproject.toml
plugins/kokoro/tests/: test_tts.py
plugins/kokoro/tts/: tts.py
plugins/krisp/: pyproject.toml
plugins/openai/: README.md  pyproject.toml
plugins/openai/sts/: realtime.py
plugins/openai/tests/: test_openai_llm.py  test_openai_realtime.py  test_openai_realtime_webrtc.py  test_openai_realtime_ws_old.py  test_realtime.py  test_realtime_live_api.py
plugins/roboflow/: README.md  pyproject.toml
plugins/ultralytics/: README.md  pyproject.toml
plugins/ultralytics/tests/: __init__.py  test_ultralytics.py
plugins/xai/: README.md  plugin.py  pyproject.toml
plugins/xai/tests/: test_xai_llm.py  xai.py
stream-agents/: pyproject.toml
stream-agents/getstream/agents/agents/: agents.py
stream-agents/getstream/agents/turn_detection/: turn_detection.py
stream-agents/getstream/agents/utils/: __init__.py
stream-agents/src/stream_agents/: __init__.py
stream-agents/src/stream_agents/agents/: agents.py  conversation.py  reply_queue.py
stream-agents/src/stream_agents/events/: EVENT_SYSTEM.md  __init__.py  event_metrics.py  events.py
stream-agents/src/stream_agents/llm/: __init__.py  claude_llm.py  claude_llm_test.py  gemini_llm.py  gemini_llm_test.py  gemini_sts.py  llm.py  llm_openai.py  llm_test.py  openai.py  openai_llm.py  openai_llm_test.py  openai_realtime_llm.py  openai_realtime_llm_test.py  openai_sts.py  realtime.py  sts.py
stream-agents/src/stream_agents/plugins/: __init__.py
stream-agents/src/stream_agents/processors/: dota_processors.py  tavus_processor.py  yolo_pose_processor.py
stream-agents/src/stream_agents/stt/: __init__.py
stream-agents/src/stream_agents/turn_detection/: __init__.py
stream-agents/src/stream_agents/utils/: utils.py
stream-agents/src/stream_agents/vad/: __init__.py  vad.py
stream-agents/stream_agents/: __init__.py  cli.py
stream-agents/stream_agents/agents/: __init__.py  agent_session.py  agents.py  conversation.py  reply_queue.py
stream-agents/stream_agents/edge/: __init__.py  edge_transport.py
stream-agents/stream_agents/llm/: __init__.py  claude_llm.py  events.py  gemini_sts.py  live.py  llm.py  llm_openai.py  llm_test.py  model.py  openai.py  openai_llm.py  openai_sts.py
stream-agents/stream_agents/llm2/: llm.py  llm_test.py  max_llm.py  mini_test.py  mini_test2.py
stream-agents/stream_agents/observability/: __init__.py
stream-agents/stream_agents/processors/: base_processor.py  dota_processors.py  tavus_processor.py  yolo_pose_processor.py
stream-agents/stream_agents/turn_detection/: __init__.py  fal_turn_detection.py  turn_detection.py
stream-agents/stream_agents/turn_detection/krisp/: krisp_turn_detection.py
stream-agents/stream_agents/utils/: __init__.py
(+402 files in other folders)
