[project]
name = "stream-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "getstream[webrtc]==2.3.0a3",
    "getstream-plugins-elevenlabs>=0.1.0",
    "python-dotenv>=1.1.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "openai>=1.99.8",
    "pillow>=11.3.0",
    "aiortc>=1.13.0",
    "getstream-plugins-deepgram>=0.1.0",
    "fal-client>=0.6.1",
    "google-genai>=0.3.0",
    "websockets>=12.0",
    "numpy>=1.24.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.8.0",
    "click>=8.0.0",
]

[project.scripts]
stream-agents = "cli:cli"

[tool.uv.workspace]
members = [
    "getstream/plugins/*",
    "getstream/video"
]
#[tool.uv.sources]
#getstream = {path = "../stream-py", editable=true}
