[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools-scm"]
build-backend = "hatchling.build"

[tool.uv.sources]
vision-agents = { workspace = true }
vision-agents-plugins-anthropic = { workspace = true }
vision-agents-plugins-aws = { workspace = true }
vision-agents-plugins-cartesia = { workspace = true }
vision-agents-plugins-deepgram = { workspace = true }
vision-agents-plugins-elevenlabs = { workspace = true }
vision-agents-plugins-fal = { workspace = true }
vision-agents-plugins-fish = { workspace = true }
vision-agents-plugins-gemini = { workspace = true }
vision-agents-plugins-kokoro = { workspace = true }
vision-agents-plugins-moonshine = { workspace = true }
vision-agents-plugins-openai = { workspace = true }
vision-agents-plugins-openrouter = { workspace = true }
vision-agents-plugins-silero = { workspace = true }
vision-agents-plugins-xai = { workspace = true }
vision-agents-plugins-getstream = { workspace = true }
vision-agents-plugins-ultralytics = { workspace = true }
vision-agents-plugins-krisp = { workspace = true }
vision-agents-plugins-smart-turn = { workspace = true }
vision-agents-plugins-wizper = { workspace = true }
vision-agents-plugins-vogent = { workspace = true }

[tool.uv.workspace]
members = [
    "agents-core",
    "plugins/anthropic",
    "plugins/aws",
    "plugins/cartesia",
    "plugins/deepgram",
    "plugins/elevenlabs",
    "plugins/fish",
    "plugins/gemini",
    "plugins/kokoro",
    "plugins/moonshine",
    "plugins/openai",
    "plugins/openrouter",
    "plugins/silero",
    "plugins/xai",
    "plugins/getstream",
    "plugins/ultralytics",
    "plugins/krisp",
    "plugins/smart_turn",
    "plugins/wizper",
    "plugins/vogent"
]
exclude = [
"**/__pycache__",
"**/tests/__pycache__",
"**/*.pyc",
"**/dist/",
"**/*.egg-info/",
"**/.pytest_cache/",
"**/.mypy_cache/",
"**/.ruff_cache/",
"examples/",
"**/test*",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pip>=25.2",
    "pytest",
    "pytest-xdist",
    "pytest-asyncio",
    "python-dotenv",
    "pre-commit",
    "scalene>=1.5.54",
    "fastmcp>=2.12.3",
    "opentelemetry-exporter-otlp>=1.37.0",
    "pytest-timeout>=2.4.0",
    "hatch-vcs>=0.5.0",
    "hatch>=1.14.2",
]

[tool.mypy]
python_version = "3.12"
mypy_path = ["agents-core"]
# Gradual typing → can tighten over time
ignore_missing_imports = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true

[tool.hatch.version]
source = "vcs"
raw-options = {  search_parent_directories = true, fallback_version = "0.0.0" }
