[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools-scm"]
build-backend = "hatchling.build"

[project]
name = "stream-agents"
description = "Open video agents. Build low latency video and voice agents on any realtime edge network."
readme = "README.md"
keywords = ["video AI", "AI", "voice AI", "video agents", "voice agents", "agents", "AI"]
dynamic = ["version"]

requires-python = ">=3.13"
dependencies = [
    "getstream[webrtc] @ git+https://github.com/GetStream/stream-py.git@webrtc#egg=getstream",
    "getstream-plugins-elevenlabs>=0.1.0",
    "python-dotenv>=1.1.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "openai==1.101.0",
    "pillow>=11.3.0",
    "aiortc>=1.13.0",
    "getstream-plugins-deepgram>=0.1.0",
    "fal-client>=0.6.1",
    "google-genai>=0.3.0",
    "websockets>=12.0",
    "numpy>=1.24.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.8.0",
    "click>=8.0.0",
    "stratz>=1.0.0",
    "daily-python>=0.19.8",
]

[project.urls]
Documentation = "https://getstream.io/video/docs/python-ai/"
Website = "https://getstream.io/video/voice-agents/"
Source = "https://github.com/getstream/stream-agents"

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]
xai = ["stream-agents-plugin-xai"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", search_parent_directories = true, fallback_version = "0.0.0" }


[tool.hatch.build.targets.wheel]
packages = ["stream_agents"]

[tool.hatch.build.targets.sdist]
include = ["/stream-agents"]


[tool.uv.sources]
"stream-agents" = {path = "../../stream-agents", editable=true}