[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools-scm"]
build-backend = "hatchling.build"

[project]
name = "stream-agents"
description = "Open video agents. Build low latency video and voice agents on any realtime edge network."
readme = "README.md"
keywords = ["video AI", "AI", "voice AI", "video agents", "voice agents", "agents", "AI"]
dynamic = ["version"]

requires-python = ">=3.12"
dependencies = [
    "getstream[webrtc] @ git+https://github.com/GetStream/stream-py.git@webrtc#egg=getstream",
    "getstream-plugins-elevenlabs>=0.1.0",
    "python-dotenv>=1.1.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "openai==1.101.0",
    "pillow>=11.3.0",
    "aiortc>=1.13.0",
    "getstream-plugins-deepgram>=0.1.0",
    "fal-client>=0.6.1",
    "google-genai>=0.3.0",
    "websockets>=12.0",
    "numpy>=1.24.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.8.0",
    "click>=8.0.0",
    "stratz>=1.0.0",
    "daily-python>=0.19.8",
    "krisp-audio>=1.4.0; sys_platform == 'darwin' and platform_machine == 'aarch64'",
    "krisp-audio>=1.4.0; sys_platform == 'win32'",
    "krisp-audio>=1.4.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "krisp-audio>=1.4.0; sys_platform == 'linux' and platform_machine == 'aarch64'"
]

[project.urls]
Documentation = "https://getstream.io/video/docs/python-ai/"
Website = "https://getstream.io/video/voice-agents/"
Source = "https://github.com/getstream/stream-agents"

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]
xai = ["stream-agents-plugin-xai"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", search_parent_directories = true, fallback_version = "0.0.0" }


[tool.hatch.build.targets.wheel]
packages = ["stream_agents"]

[tool.hatch.build.targets.sdist]
include = ["/stream-agents"]

[tool.uv.sources]
krisp-audio = [
    { path = "./stream_agents/turn_detection/krisp/krisp_audio-1.4.0-cp313-cp313-macosx_12_0_arm64.whl", marker = "sys_platform == 'darwin' and platform_machine == 'aarch64'" },
    { path = "./stream_agents/turn_detection/krisp/krisp_audio-1.4.0-cp313-cp313-linux_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
    { path = "./stream_agents/turn_detection/krisp/krisp_audio-1.4.0-cp313-cp313-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { path = "./stream_agents/turn_detection/krisp/krisp_audio-1.4.0-cp313-cp313-win_amd64.whl", marker = "sys_platform == 'win32'" }
]

"stream-agents" = {path = "../../stream-agents", editable=true}
