[project]
name = "simple-agents-example"
version = "0.0.0"
requires-python = ">=3.13"

# put only what this example needs
dependencies = [
  "python-dotenv>=1.0",
  "getstream[webrtc]==2.3.0a5",
  "stream-agents-plugins-deepgram",
  "stream-agents-plugins-elevenlabs",
  "getstream-plugins-common",
  "stream-agents",
  "openai>=1.101.0",
  "krisp-audio>=1.4.0; sys_platform == 'darwin' and platform_machine == 'aarch64'",
  "krisp-audio>=1.4.0; sys_platform == 'win32'",
  "krisp-audio>=1.4.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "krisp-audio>=1.4.0; sys_platform == 'linux' and platform_machine == 'aarch64'",
  "anthropic>=0.66.0",
  "google-genai>=1.33.0",
]

[tool.uv.sources]
krisp-audio = [
  { path = "../../agents-core/stream_agents/core/turn_detection/krisp/krisp_audio-1.4.0-cp313-cp313-macosx_12_0_arm64.whl", marker = "sys_platform == 'darwin' and platform_machine == 'aarch64'" },
  { path = "../../agents-core/stream_agents/core/turn_detection/krisp/krisp_audio-1.4.0-cp313-cp313-linux_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
  { path = "../../agents-core/stream_agents/core/turn_detection/krisp/krisp_audio-1.4.0-cp313-cp313-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { path = "../../agents-core/stream_agents/core/turn_detection/krisp/krisp_audio-1.4.0-cp313-cp313-win_amd64.whl", marker = "sys_platform == 'win32'" }
]
"stream-agents-plugins-deepgram" = {path = "../../plugins/deepgram", editable=true}
"stream-agents-plugins-elevenlabs" = {path = "../../plugins/elevenlabs", editable=true}
"stream-agents" = {path = "../../agents-core", editable=true}
