[project]
name = "simple-agents-example"
version = "0.0.0"
requires-python = ">=3.13"

# put only what this example needs
dependencies = [
  "python-dotenv>=1.0",
  "vision-agents-plugins-deepgram",
  "vision-agents-plugins-elevenlabs",
  "vision-agents-plugins-anthropic",
  "vision-agents-plugins-getstream",
  "getstream-plugins-common",
  "vision-agents",
  "openai>=1.101.0",
  "anthropic>=0.66.0",
  "google-genai>=1.33.0",
  "fal-client>=0.5.3",
]

[tool.uv.sources]
"vision-agents-plugins-deepgram" = {path = "../../plugins/deepgram", editable=true}
"vision-agents-plugins-elevenlabs" = {path = "../../plugins/elevenlabs", editable=true}
"vision-agents-plugins-anthropic" = {path = "../../plugins/anthropic", editable=true}
"vision-agents-plugins-getstream" = {path = "../../plugins/getstream", editable=true}

"vision-agents" = {path = "../../agents-core", editable=true}
