[project]
name = "vision-agents-cluely"
version = "0.0.0"
requires-python = ">=3.13"

# put only what this example needs
dependencies = [
  "python-dotenv>=1.0",
  "vision-agents",
  "vision-agents-plugins-deepgram",
  "vision-agents-plugins-elevenlabs", 
  "vision-agents-plugins-getstream",
  "vision-agents-plugins-openai",
  "vision-agents-plugins-ultralytics",
  "ultralytics>=8.3.184",
  "av>=14.4.0",
  "fastapi>=0.116.1",
]

[tool.uv.sources]
"vision-agents" = {path = "../../agents-core", editable=true}
"vision-agents-plugins-deepgram" = {path = "../../plugins/deepgram", editable=true}
"vision-agents-plugins-elevenlabs" = {path = "../../plugins/elevenlabs", editable=true}
"vision-agents-plugins-getstream" = {path = "../../plugins/getstream", editable=true}
"vision-agents-plugins-openai" = {path = "../../plugins/openai", editable=true}
"vision-agents-plugins-ultralytics" = {path = "../../plugins/ultralytics", editable=true}
