[project]
name = "function-calling-example"
version = "0.1.0"
description = "Example demonstrating function calling capabilities"
authors = [
    {name = "Stream", email = "dev@getstream.io"},
]
dependencies = [
    "stream-agents-core",
    "openai",
    "anthropic",
    "google-generativeai",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
