[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-agents-plugins-anthropic"
version = "0.1.1"
description = "Anthropic/Claude plugin for GetStream"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "stream-agents",
    "anthropic",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
stream-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
