[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-agents-plugins-deepgram"
version = "0.1.1"
description = "Deepgram plugin for GetStream"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "vision-agents",
    "deepgram-sdk>=4.5.0",
    "numpy>=2.2.6,<2.3",
]

[tool.hatch.build.targets.wheel]
packages = [".", "vision_agents"]

[tool.uv.sources]
vision-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "soundfile>=0.13.1",
    "torchaudio>=2.7.1",
    "scipy>=1.15.3,<1.16",
]
