[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-agents-plugins-fal"
version = "0.1.1"
description = "Fal.ai plugin for GetStream"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "stream-agents",
    "fal-client>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
stream-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "numpy>=2.2.6,<2.3",
]
