[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-agents-plugins-gemini"
version = "0.1.0"
description = "Google Gemini plugin for GetStream"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "stream-agents",
    "google-genai>=1.29.0",
    "numpy>=2.2.6",
]

[tool.hatch.build.targets.wheel]
packages = ["stream_agents"]

[tool.hatch.build.targets.sdist]
include = ["/stream_agents"]

[tool.uv.sources]
stream-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.1",
]
