[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getstream-plugins-kokoro"
version = "0.1.0"
description = "Kokoro TTS plugin for GetStream"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "getstream[webrtc]==2.3.0a5",
    "stream-agents",
    "kokoro>=0.9.4",
    "misaki[en]>=0.9.4",
    "numpy>=2.2.6,<2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
stream-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
