[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-agents-plugins-krisp"
version = "0.1.0"
description = "Krisp turn detection plugin for Vision Agents"
readme = "README.md"
keywords = ["krisp", "turn detection", "AI", "voice agents", "agents"]
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "stream-agents>=0.1.0",
    "numpy>=1.24.0",
]

[project.urls]
Documentation = "https://getstream.io/video/docs/python-ai/"
Website = "https://getstream.io/video/voice-agents/"
Source = "https://github.com/getstream/agents"

[tool.hatch.build.targets.wheel]
packages = ["vision_agents"]

[tool.uv.sources]
stream-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

