[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getstream-plugins-openai"
version = "0.1.1"
description = "OpenAI plugin for GetStream"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "getstream[webrtc]==2.3.0a5",
    "getstream-plugins-common",
    "openai[realtime]>=1.97.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
stream-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
