[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-agents-plugins-xai"
dynamic = ["version"]
description = "XAI for stream agents"
license = "Apache-2.0"
requires-python = ">=3.9.0"
dependencies = [
    "stream-agents",
    "xai-sdk",
]


[tool.hatch.version]
path = "./version.py"

[tool.hatch.build.targets.wheel]
packages = ["getstream"]

[tool.hatch.build.targets.sdist]
include = ["/stream-agents"]
