[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-agents-plugins-xai"
dynamic = ["version"]
description = "XAI for stream agents"
readme = "README.md"
requires-python = ">=3.10.0"
license = "Apache-2.0"
dependencies = [
    "xai-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
stream-agents = { workspace = true }

[tool.hatch.version]
path = "stream_agents/plugins/xai/version.py"
