[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-agents-plugins-xai"
version = "0.1.0"
description = "XAI for stream agents"
readme = "README.md"
requires-python = ">=3.10.0"
license = "Apache-2.0"
dependencies = [
    "xai-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
vision-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
