[project]
name = "function-calling-example"
version = "0.1.0"
description = "Example demonstrating function calling capabilities"
authors = [
    {name = "Stream", email = "dev@getstream.io"},
]
dependencies = [
    "python-dotenv",
    "stream-agents-plugins-openai",
    "stream-agents-plugins-anthropic", 
    "stream-agents-plugins-gemini",
    "stream-agents",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
"stream-agents-plugins-openai" = {path = "../../plugins/openai", editable=true}
"stream-agents-plugins-anthropic" = {path = "../../plugins/anthropic", editable=true}
"stream-agents-plugins-gemini" = {path = "../../plugins/gemini", editable=true}
"stream-agents" = {path = "../../agents-core", editable=true}
