[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-mcp-demo"
version = "0.1.0"
description = "GitHub MCP Demo for Stream Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "stream-agents",
    "python-dotenv>=1.1.1",
    "stream-agents-plugins-deepgram",
    "stream-agents-plugins-elevenlabs",
    "stream-agents-plugins-silero",
    "stream-agents-plugins-getstream",
    "stream-agents-plugins-openai",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.uv.sources]
"stream-agents" = {path = "../../agents-core", editable=true}
"stream-agents-plugins-deepgram" = {path = "../../plugins/deepgram", editable=true}
"stream-agents-plugins-elevenlabs" = {path = "../../plugins/elevenlabs", editable=true}
"stream-agents-plugins-silero" = {path = "../../plugins/silero", editable=true}
"stream-agents-plugins-getstream" = {path = "../../plugins/getstream", editable=true}
"stream-agents-plugins-openai" = {path = "../../plugins/openai", editable=true}
