[project]
name = "gemini-live-realtime-example"
version = "0.0.0"
requires-python = ">=3.10"

# put only what this example needs
dependencies = [
  "python-dotenv>=1.0",
  "stream-agents-plugins-gemini",
  "stream-agents-plugins-getstream",
  "stream-agents",
  "google-genai>=1.33.0",
  "opentelemetry-exporter-otlp>=1.37.0",
]

[tool.uv.sources]
"stream-agents-plugins-getstream" = {path = "../../../plugins/getstream", editable=true}
"stream-agents-plugins-gemini" = {path = "../../../plugins/gemini", editable=true}
"stream-agents" = {path = "../../../agents-core", editable=true}
