[project]
name = "aws-bedrock-realtime-example"
version = "0.0.0"
requires-python = ">=3.12"

# put only what this example needs
dependencies = [
  "python-dotenv>=1.0",
  "vision-agents-plugins-aws",
  "vision-agents-plugins-getstream",
  "vision-agents",
  "boto3>=1.26.0",
  "opentelemetry-exporter-otlp>=1.37.0",
  "opentelemetry-exporter-prometheus>=0.58b0",
  "prometheus-client>=0.23.1",
  "opentelemetry-sdk>=1.37.0",
]

[tool.uv.sources]
"vision-agents-plugins-getstream" = {path = "../../getstream", editable=true}
"vision-agents-plugins-aws" = {path = "..", editable=true}
"vision-agents" = {path = "../../../agents-core", editable=true}
