[project]
name = "llm-audio-conversation-example"
version = "0.1.0"
description = "Example project showing how to integrate speech-to-text, text-to-speech and an LLM."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream-plugins-deepgram>=0.1.0",
    "getstream-plugins-elevenlabs>=0.1.0",
    "getstream-plugins-silero>=0.1.0",
    "python-dotenv>=1.1.1",
    "openai>=1.93.0",
    "elevenlabs>=2.7.1",
]

[tool.uv.sources]
getstream-plugins-deepgram = { path = "../../../plugins/deepgram", editable = true }
getstream-plugins-elevenlabs = { path = "../../../plugins/elevenlabs", editable = true }
getstream-plugins-silero = { path = "../../../plugins/silero", editable = true }
